{
    "name": "InputActions",
    "maps": [
        {
            "name": "Gameplay",
            "id": "6e1b3d80-d72b-4d1f-bb73-33e77f34ba23",
            "actions": [
                {
                    "name": "PauseToggle",
                    "type": "Button",
                    "id": "ffbf4005-44a1-46ee-b341-cb7b9b6fdf53",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PointerPosition",
                    "type": "Value",
                    "id": "09c53b62-736d-42ee-91d9-38495fe3ddbc",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "7222e5e1-a7c4-44eb-b1d0-f47f1d57fa09",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Dodge",
                    "type": "Button",
                    "id": "999c0a9b-368e-46bf-96f8-4877a41054f3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "87be3b1b-bdf4-4ff8-a45c-b0441680b8a9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrevWeapon",
                    "type": "Button",
                    "id": "53c0ac56-d5a4-461d-a824-517c6fd6a981",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WeaponChange",
                    "type": "Value",
                    "id": "32a32dea-114e-46e2-8274-a8a74c063dbc",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "dd83c85a-faf4-4fb9-958a-96cc8cb6496e",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9408f5f5-7833-4841-882e-2a08dd2a7d8d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "307e9eaa-a8be-425d-8cf6-a90724212ae1",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "c694d39b-6f1d-4ef1-a2bf-d2fd6bd643ed",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a97daa6e-31cf-4ea2-b9d6-b093c6513269",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "48bb5791-0af1-4e87-b758-cf4b43b16ed7",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WeaponChange",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "d624b5c4-c84a-451b-832d-903e2ac35d2b",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WeaponChange",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "af8c5a55-c10b-4d8a-b906-237b15baf936",
                    "path": "<Mouse>/backButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WeaponChange",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ae88b942-a14b-4f7f-ab63-68ab963bfd92",
                    "path": "<Mouse>/forwardButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WeaponChange",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5c493597-dd23-4b23-b84c-2cd09825147c",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fc19e543-a428-44d9-ae5e-871c46c6e7de",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3b81e6b4-2072-40db-811b-3b97a0a67923",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dodge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8e079a90-9bd3-4b2c-9620-b3e211d3c4a5",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6b026c4c-3c9a-4a7f-94b0-98c942f8b124",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrevWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "a7ef3dc3-39b6-47a1-aa65-ee464df5e1f3",
            "actions": [
                {
                    "name": "PauseToggle",
                    "type": "Button",
                    "id": "00852fbf-b35e-4941-b647-cba6c09c5d6e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "dc867f38-5ee1-4256-8bff-c6e7e2a191a3",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}