public enum InputType
{
    //Gameplay
    PointerPosition,
    GamepadPosition,
    Movement,
    Dodge,
    Attack,
    PrevWeapon,
	WeaponChangeAxis,
    WeaponChangePrevButton,
    WeaponChangeNextButton,
    Meele,
    MerchantInteraction,

    //Menu

    //Menu and Gameplay
    PauseToggle
}
